--- a/rest-server/pom.xml
+++ b/rest-server/pom.xml
@@ -298,7 +298,7 @@
     </dependencies>
 
     <build>
-        <finalName>happyshopping-services</finalName>
+        <finalName>rest-server</finalName>
 
         <plugins>
 
