--- a/soap-server/pom.xml
+++ b/soap-server/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.majesco</groupId>
-    <artifactId>rest-server</artifactId>
+    <groupId>com.biplab</groupId>
+    <artifactId>soap-server</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
@@ -185,11 +185,6 @@
             <artifactId>activemq-all</artifactId>
             <version>5.10.0</version>
         </dependency>
-        <!--<dependency>
-            <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-pool</artifactId>
-            <version>5.6.0</version>
-        </dependency>-->
 
         <!-- JACKSON DEPENDENCIES -->
         <dependency>
@@ -211,32 +206,9 @@
     </dependencies>
 
     <build>
-        <finalName>rest-server</finalName>
+        <finalName>soap-server</finalName>
 
         <plugins>
-
-            <!-- JAXB plugin -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>jaxb2-maven-plugin</artifactId>
-                <version>${jaxb2.plugin.version}</version>
-                <executions>
-                    <execution>
-                        <id>generate-source</id>
-                        <goals>
-                            <goal>xjc</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <packageName>com.majesco.schemas.sample</packageName>
-                    <schemaDirectory>src/main/resources/META-INF/xsd</schemaDirectory>
-                    <schemaFiles>user.xsd</schemaFiles>
-                    <bindingDirectory>src/main/resources/META-INF/jaxb</bindingDirectory>
-                    <bindingFiles>serializable.xjb</bindingFiles>
-                </configuration>
-            </plugin>
-
             <plugin>
                 <groupId>org.apache.cxf</groupId>
                 <artifactId>cxf-codegen-plugin</artifactId>
@@ -248,14 +220,10 @@
                         <configuration>
                             <sourceRoot>${project.build.directory}/generated/cxf</sourceRoot>
                             <wsdlOptions>
-                                <!-- Shrimant : 23/06/2016 VindicateMoto -->
                                 <wsdlOption>
                                     <wsdl>${basedir}/src/main/resources/wsdl/globalweather.wsdl</wsdl>
                                     <extraargs>
                                         <extraarg>-verbose</extraarg>
-                                        <!--<extraarg>-p</extraarg>
-                                        <extraarg>com.biplab.cxf.weather</extraarg>
-                                        <extraarg>-autoNameResolution</extraarg>-->
                                     </extraargs>
                                 </wsdlOption>
                             </wsdlOptions>
@@ -298,7 +266,7 @@
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
-                    <path>/rest-server</path>
+                    <path>/soap-server</path>
                 </configuration>
             </plugin>
 
